@@ -15,6 +15,8 @@ For a complete change history, please see the Subversion log comments.
 Current Version (SVN trunk, 6.1-dev, future 6.2): 
 ------------------------------------------------- 
 
+- Fixed the build problem in mapunion.c (#3877)
+
 - Implement to get all shapes with the clustered layer (#3873)
 
 - Union layer: Fixed the crash when styling source layers using attributes (#3870)
